package herencias.tarea6c;

public interface Dibujable {
    void dibujar();
}
