package herencias.tarea6c;

public interface Movible {
    void moverIzq(int x);

    void moverDer(int x);

    void moverArr(int y);

    void moverAba(int y);
}
