' Generated by UML Generator
' Encoded: pPPBJzj0483l_XLxD4qSzHnL4McYLf6WHO0g4EAmjhVEflOEhDSHWPBVpdXjxyE9-v1ww0MnyvvlPySvBHMLgYhoeFp1nGELj219JijohfJaSQNOAW5nnPyPUH-iUSf8mcMIio2WSQaaJLHZJYuWvna882y18L5CIpObNAZwG7DLIMgEeYgOX3EQGcba4VuPTI52dax95QONsPWaa8EqHnDuJ9omOz8FUb87p9ZwYFRXIPTdLBOI4mPLM-1fQptN8NtxLkPayts-sCo-ewiGVKS5JKUrI_DVy1e43SfBbYWgiYflOMwPL3nXsDW5kBoitTyJqtoePBhP5AeOhnGbALxvXihGgRG0pBzwVWoV-ZrepPB90SrSod1tN1FJGmsY_DOsMgVNhTxT3xD2DPFVQSB8KXUD7MXS-tuFXkjd1WL3VwhjHYyu-fZkbHIKYv3AhEp2tzqxTHapY1KJJ9xJ1pf7S6M83sDJ2GNenjI7Jpn3k3FqH8lsD5vgiZDRWswhkTOdC_sx_Zl0KmjrJ7RUFD_uCtPpo1wDRdsZsqFOlqDw3bjkW0vEm7vm0lQ34x0Vc013Q87xnOn-3YBZgaelQSh1K4gOK1Bwpw5r_DLRa2RCVpd_Pswt_XtwAdd4UQ6XcASpVCkznTrCQeFRejEONNW6SsC_J7c0B7kiQ5w6IFzhlC75XSeO86TKrDerBTSBIDrLZIsjKgVoXWEAREOUWBgA0uT6wbVuPslu6ZU5tS8ZS_ndopQ10Z-ux1f2DRNPB87ZnPaFRHJzdBMt5pYV32tkZ5p5P8AAzc4VoCqETJNlegWTfkvHkZaxcHVN4zgWdTX6j7JzWgryCfbPAi4f4od-J7a3
' URL: http://www.plantuml.com/plantuml/uml/pPPBJzj0483l_XLxD4qSzHnL4McYLf6WHO0g4EAmjhVEflOEhDSHWPBVpdXjxyE9-v1ww0MnyvvlPySvBHMLgYhoeFp1nGELj219JijohfJaSQNOAW5nnPyPUH-iUSf8mcMIio2WSQaaJLHZJYuWvna882y18L5CIpObNAZwG7DLIMgEeYgOX3EQGcba4VuPTI52dax95QONsPWaa8EqHnDuJ9omOz8FUb87p9ZwYFRXIPTdLBOI4mPLM-1fQptN8NtxLkPayts-sCo-ewiGVKS5JKUrI_DVy1e43SfBbYWgiYflOMwPL3nXsDW5kBoitTyJqtoePBhP5AeOhnGbALxvXihGgRG0pBzwVWoV-ZrepPB90SrSod1tN1FJGmsY_DOsMgVNhTxT3xD2DPFVQSB8KXUD7MXS-tuFXkjd1WL3VwhjHYyu-fZkbHIKYv3AhEp2tzqxTHapY1KJJ9xJ1pf7S6M83sDJ2GNenjI7Jpn3k3FqH8lsD5vgiZDRWswhkTOdC_sx_Zl0KmjrJ7RUFD_uCtPpo1wDRdsZsqFOlqDw3bjkW0vEm7vm0lQ34x0Vc013Q87xnOn-3YBZgaelQSh1K4gOK1Bwpw5r_DLRa2RCVpd_Pswt_XtwAdd4UQ6XcASpVCkznTrCQeFRejEONNW6SsC_J7c0B7kiQ5w6IFzhlC75XSeO86TKrDerBTSBIDrLZIsjKgVoXWEAREOUWBgA0uT6wbVuPslu6ZU5tS8ZS_ndopQ10Z-ux1f2DRNPB87ZnPaFRHJzdBMt5pYV32tkZ5p5P8AAzc4VoCqETJNlegWTfkvHkZaxcHVN4zgWdTX6j7JzWgryCfbPAi4f4od-J7a3
' Generated on: 2026-04-09T13:03:36.417895708

@startuml
skinparam classAttributeIconSize 0
hide circle

abstract class Poligono {
  -base: int
  -altura: int
  -numeroLados: int
  --
  +Poligono(id: String, color: String, base: int, altura: int, numeroLados: int)
  +getBase(): int
  +setBase(base: int): void
  +getAltura(): int
  +setAltura(altura: int): void
  +getNumeroLados(): int
  +setNumeroLados(n: int): void
  +toString(): String
}

class Rectangulo {
  -vertices: Point
  --
  +Rectangulo(id: String, color: String, base: int, altura: int)
  +area(): double
  +dibujar(): void
  +moverIzq(x: int): void
  +moverDer(x: int): void
  +moverArr(y: int): void
  +moverAba(y: int): void
  +getVertices(): Point[]
  +toString(): String
}

interface Dibujable {
  ~dibujar(): void
}

class Geometria {
  +{static} main(args: String[]): void
  +{static} obtenerMapaAreas(conjunto: Set<Figura>): Map<Figura,Double>
}

class Point {
  -x: int
  -y: int
  --
  +Point(x: int, y: int)
  +getX(): int
  +setX(x: int): void
  +getY(): int
  +setY(y: int): void
  +toString(): String
}

interface Movible {
  ~moverIzq(x: int): void
  ~moverDer(x: int): void
  ~moverArr(y: int): void
  ~moverAba(y: int): void
}

class Circulo {
  -longitudRadio: int
  -centro: Point
  --
  +Circulo(id: String, color: String, radio: int)
  +area(): double
  +dibujar(): void
  +moverIzq(x: int): void
  +moverDer(x: int): void
  +moverArr(y: int): void
  +moverAba(y: int): void
  +getLongitudRadio(): int
  +setLongitudRadio(r: int): void
  +getCentro(): Point
  +toString(): String
}

abstract class Figura {
  -id: String
  -color: String
  --
  +Figura(id: String, color: String)
  +area(): double
  +equals(o: Object): boolean
  +hashCode(): int
  +getId(): String
  +setId(id: String): void
  +getColor(): String
  +setColor(color: String): void
  +toString(): String
}

class Triangulo {
  +Triangulo(id: String, color: String, base: int, altura: int)
  +area(): double
  +compareTo(t: Triangulo): int
  +toString(): String
}

Poligono --|> Figura
Rectangulo --|> Poligono
Rectangulo ..|> Movible
Rectangulo ..|> Dibujable
Rectangulo *-- Point
Circulo --|> Figura
Circulo ..|> Movible
Circulo ..|> Dibujable
Circulo *-- Point
Triangulo --|> Poligono
Triangulo ..> Triangulo
@enduml